Mimir/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: mimir
spec:
  selector:
    app: mimir
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 9095
      targetPort: 9095
  type: LoadBalancer
